kubernetes/argocd/applications/media/apps/huntarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: huntarr
  namespace: media
  labels:
    route.scope: internal
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/guarded: "true"
    gatus.home-operations.com/endpoint: |
      group: Media
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: network
  hostnames:
    - huntarr.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-forward
      backendRefs:
        - name: huntarr
          port: 9705
